# brazilian-political-rhetoric-detection

./: .env.example  .gitignore  pyproject.toml
configs/: collection.yaml  deputies.yaml  evaluation.yaml  models.yaml  sampling.yaml  taxonomy.yaml
docs/: ANNOTATION_PROTOCOL.md  ARCHITECTURE.MD  PIPELINE_DECISIONS.md
notebooks/: 03_eda.ipynb  poc_manipulacao_retorica_ptbr.ipynb
scripts/: 01_collect.py  02_preprocess.py  04_sample.py  05_segment.py  06_pilot.py  07_build_pairs.py  08_classify_generative.py  08b_classify_pairs.py  09_train_bertimbau.py  10_classify_bertimbau.py  11_evaluate.py  convert_annotations.py  export_for_annotation.py
src/: __init__.py  exceptions.py
src/annotation/: __init__.py  loader.py
src/classification/: __init__.py  base.py  bertimbau.py  gpt4o.py  llama.py  prompt_builder.py  runner.py
src/collection/: __init__.py  api_client.py  collector.py
src/config/: loader.py
src/evaluation/: __init__.py  agreement.py  bias.py  cooccurrence.py  performance.py
src/pilot/: __init__.py
src/preprocessing/: __init__.py  filters.py  report.py
src/sampling/: __init__.py  segmenter.py  stratifier.py
src/schemas/: __init__.py  annotation.py  config.py  evaluation.py  prediction.py  speech.py
src/taxonomy/: __init__.py  registry.py
src/utils/: io.py  logging.py  seeds.py
