[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhetoric-detection-pipeline"
version = "0.1.0"
description = "Detection of rhetorical manipulation techniques in Brazilian parliamentary speeches"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Brenno Henrique"},
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "torch>=2.2",
    "transformers>=4.40",
    "openai>=1.30",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
